--- a/galloCRM/templates/king_admin/table_objs.html
+++ b/galloCRM/templates/king_admin/table_objs.html
@@ -9,9 +9,9 @@
         </div>
         <div class="panel-body">
             <div class="row">
-                <from class="" method="get">
-                    {% for condtion in admin_class  %}
-                </from>
+{#                <from class="" method="get">#}
+{#                    {% for condtion in admin_class %}#}
+{#                </from>#}
             </div>
             <table class="table table-hover">
                 <thead>
@@ -22,7 +22,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% get_query_sets admin_class as query_sets %}
+{#                    {% get_query_sets admin_class as query_sets %}#}
                     {% for obj in query_sets %}
                     <tr>
                         {% build_table_row obj admin_class %}
@@ -33,23 +33,22 @@
         <nav>
             <ul class="pagination">
                 {% if query_sets.has_previous %}
-                    <li class=""><a href="?page={{ query_sets.previous_page_number }}"></a></li>
+                    <li class=""><a href="?page={{ query_sets.previous_page_number }}">上一页</a></li>
                 {% endif %}
-{#                    <li class="active"><a>{{ query_sets.number }}</a></li>#}
+
                 {% for loop_counter in query_sets.paginator.page_range %}
+{#                    {{ loop_counter }}#}
                     {% render_page_ele loop_counter query_sets %}
                 {% endfor %}
 
                 {% if query_sets.has_next %}
-                    <li class=""><a href="?page={{ query_sets.next_page_number }}"></a></li>
+                    <li class=""><a href="?page={{ query_sets.next_page_number }}">下一页</a></li>
                 {% endif %}
+{#                {% if not query_sets.has_next %}#}
+{#                    <li class="">null</li>#}
+{#                {% endif %}#}
             </ul>
         </nav>
         </div>
     </div>
-{#    {% for column in admin_class.list_display %}#}
-{#    {% get_query_sets admin_class as query_sets %}   #自定义标签#}
-{#    {% for obj in query_sets %}#}
-
-
 {% endblock %}
