--- a/galloCRM/templates/king_admin/table_objs.html
+++ b/galloCRM/templates/king_admin/table_objs.html
@@ -17,9 +17,22 @@
                         </div>
                     {% endfor %}
                     <button type="submit" class="btn btn-success">GO</button>
+
+                    <hr>
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <input type="search" name="_q" class="form-control" style="margin-left: 15px" value="{{ search_text }}" placeholder="search by {% for search_field in admin_class.search_fields %}{{ search_field }},{% endfor %}">
+                        </div>
+
+                        <div class="col-lg-2">
+                            <button type="submit" class="btn btn-success">
+                                Search
+                            </button>
+                        </div>
+                    </div>
                 </form>
             </div>
-
+{#by_key#}
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -47,7 +60,7 @@
 {#                {% for loop_counter in query_sets.paginator.page_range %}#}
 {#                    {% render_page_ele loop_counter query_sets filter_condtions%}#}
 {#                {% endfor %}#}
-                {% built_paginators query_sets filter_condtions %}
+                {% built_paginators query_sets filter_condtions previous_orderby search_text %}
 
                 {% if query_sets.has_next %}
                     <li class=""><a href="?page={{ query_sets.next_page_number }}">下一页</a></li>
