--- a/galloCRM/templates/king_admin/table_objs.html
+++ b/galloCRM/templates/king_admin/table_objs.html
@@ -5,7 +5,8 @@
     {{ admin_class.list_display }}
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 class="panel-title">Panel title</h3>
+            <h3 class="panel-title">{% get_model_name admin_class %}</h3>
+            <a href="{{ request.path }}add/" class="pull-right">Add</a>
         </div>
         <div class="panel-body">
             <div class="row">
@@ -46,7 +47,7 @@
 {#                    {% get_query_sets admin_class as query_sets %}#}
                     {% for obj in query_sets %}
                     <tr>
-                        {% build_table_row obj admin_class %}
+                        {% build_table_row request obj admin_class %}
                     </tr>
                     {% endfor %}
                 </tbody>
