--- a/galloCRM/templates/king_admin/table_obj_change.html
+++ b/galloCRM/templates/king_admin/table_obj_change.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-leizhuzhu
-</body>
-</html>
+{%  extends 'king_admin/table_index.html' %}
+{% load tags %}
+
+{% block container %}
+
+    change table
+    <form class="form-horizontal" role="form" method="post">{% csrf_token %}
+      <span style="color: red">{{ form_obj.errors }}</span>   {# 错误显示 #}
+      {% for field in form_obj %}
+      <div class="form-group">
+        <label  class="col-sm-2 control-label" style="font-weight: normal">
+            {% if field.field.required %}
+                <b>{{ field.label }}</b>
+            {% else %}
+                {{ field.label }}
+            {% endif %}
+        </label>
+        <div class="col-sm-6">
+{#          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">#}
+            {{ field }}
+        </div>
+      </div>
+      {% endfor %}
+
+      <div class="form-group">
+          <div class="col-sm-10 ">
+            <button type="submit" class="btn btn-success pull-right">Save</button>
+          </div>
+      </div>
+    </form>
+{% endblock %}
