--- a/galloCRM/templates/king_admin/table_index.html
+++ b/galloCRM/templates/king_admin/table_index.html
@@ -43,11 +43,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for table_name,admin  in app_tables.items %}
+                        {% for table_name,admin_class  in app_tables.items %}
                             <tr>
                                 <td>
                                     <a href="{% url 'table_objs' app_name table_name %}">
-                                       {% render_app_name admin %}
+                                       {% render_app_name admin_class %}
                                     </a>
                                 </td>
                                 <td>add</td>
