--- a/galloCRM/templates/king_admin/table_obj_change.html
+++ b/galloCRM/templates/king_admin/table_obj_change.html
@@ -21,39 +21,39 @@
       {% for field in form_obj %}
       <div class="form-group">
         <label  class="col-sm-2 control-label" style="font-weight: normal">
-            {% if field.field.required %}
-                <b>{{ field.label }}</b>
+            {% if field.field.required %}    {#须填不能为空  #}
+                <b>{{ field.label }}</b>   {# 字段对应的<lable>标签的文字，例如“Name”。 #}
             {% else %}
-                {{ field.label }}
+                 {{ field.label }}
             {% endif %}
         </label>
         <div class="col-sm-6">
 {#          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">#}
-            {% if field.name in admin_class.filter_horizontal %}
+            {% if field.name in admin_class.filter_horizontal %}   {# 当field.name 为tags时 #}
                 <div class="col-md-5">
                     {% get_m2m_obj_list admin_class field form_obj as m2m_obj_list%}
-                    <select id="id_{{ field.name }}_from"  multiple class="filter-select-box">
-                        {% for obj in m2m_obj_list %}
+                    <select id="id_{{ field.name }}_from"  multiple="multiple" class="filter-select-box">
+                        {% for obj in m2m_obj_list %}   {# tags 里面存储的字段 #}
                             <option ondblclick="MoveElementTo(this,'id_{{ field.name }}_to','id_{{ field.name }}_from')"  value="{{ obj.id }}">{{ obj }}</option>
                         {% endfor %}
                     </select>
                 </div>
                 <div class="col-md-1">
-                    ç®­å¤´
+                    change
                 </div>
                 <div class="col-md-5" >
                     {% get_m2m_selected_obj_list form_obj field  as selected_obj_list %}
                     <select tag="chosen_list" id="id_{{ field.name }}_to" name="{{ field.name }}" multiple class="filter-select-box">
 
                         {% for obj in selected_obj_list %}
-                        <option value="{{ obj.id }}" ondblclick="MoveElementTo(this,'id_{{ field.name }}_from','id_{{ field.name }}_to')" >{{ obj }}</option>
+                            <option value="{{ obj.id }}" ondblclick="MoveElementTo(this,'id_{{ field.name }}_from','id_{{ field.name }}_to')" >{{ obj }}</option>
                         {% endfor %}
                     </select>
 
 {#                    {% print_obj_methods form_obj %}#}
                 </div>
             {% else %}
-                {{ field }}
+                {{ field }}     {# 表单里面的值 #}
             {% endif %}
         </div>
       </div>
@@ -65,6 +65,10 @@
 {#                <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>#}
 {##}
 {#          </div>#}
+          <div class="col-sm-2">
+              <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>
+
+          </div>
           <div class="col-sm-10 ">
             <button type="submit" class="btn btn-success pull-right">Save</button>
           </div>
