--- a/galloCRM/templates/king_admin/table_obj_change.html
+++ b/galloCRM/templates/king_admin/table_obj_change.html
@@ -65,10 +65,13 @@
 {#                <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>#}
 {##}
 {#          </div>#}
+          {% block obj_delete %}
+
           <div class="col-sm-2">
               <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>
 
           </div>
+              {% endblock %}
           <div class="col-sm-10 ">
             <button type="submit" class="btn btn-success pull-right">Save</button>
           </div>
@@ -88,8 +91,12 @@
     function SelectAllChosenData() {
 
         $("select[tag='chosen_list'] option").each(function () {
-            $(this).prop("selected",true);
+            $(this).prop("selected", true);
         })
+        //reove all disabled attrs
+
+
+        $("form").find("[disable]").removeAttr("disabled");
         return true;
     }
 </script>
