--- a/galloCRM/templates/king_admin/table_objs.html
+++ b/galloCRM/templates/king_admin/table_objs.html
@@ -18,35 +18,55 @@
                         </div>
                     {% endfor %}
                     <button type="submit" class="btn btn-success">GO</button>
-
                     <hr>
                     <div class="row">
-                        <div class="col-lg-2">
-                            <input type="search" name="_q" class="form-control" style="margin-left: 15px" value="{{ search_text }}" placeholder="search by {% for search_field in admin_class.search_fields %}{{ search_field }},{% endfor %}">
+                        <div class="col-lg-3">
+                             <input type="search" style="margin-left:15px" name="_q" class="form-control"  value="{{ search_text }}" placeholder="search by {% for search_field in admin_class.search_fields %}{{ search_field }},{% endfor %} ">
                         </div>
-
-                        <div class="col-lg-2">
-                            <button type="submit" class="btn btn-success">
-                                Search
-                            </button>
+                        <div class="col-lg-2"ã€€>
+                            <button type="SUBMIT" class="btn btn-success">search</button>
                         </div>
                     </div>
                 </form>
-            </div>
-{#by_key#}
+                <div class="row" style="margin-top: 10px">
+                    <form onsubmit="return ActionSubmit(this)" method="POST">{% csrf_token %}
+
+                      <div class="col-lg-2">
+                          <select id="action_list" name="action" class="form-control" style="margin-left:15px">
+                              <option value="">---------</option>
+                              {% for action in admin_class.actions %}
+                                <option value="{{ action }}">{% get_action_verbose_name admin_class action %}</option>
+                              {% endfor %}
+                          </select>
+
+                      </div>
+                      <div class="col-lg-1"ã€€>
+                        <button type="submit" class="btn  " >Go</button>
+                      </div>
+                    </form>
+                </div>
+
             <table class="table table-hover">
                 <thead>
                     <tr>
+                        <th style="width: 35px"><input type="checkbox" onclick="CheckAllToggle(this)"></th>
                        {% for column in admin_class.list_display %}
 {#                            <th>{{ column }}</th>#}
                            {% built_table_header_column column orderby_key filter_condtions %}
                         {% endfor %}
                     </tr>
                 </thead>
+                <tfoot>
+                    <tr>
+                        <td></td>
+                        <td>{{ query_sets.paginator.count }}条</td>
+                    </tr>
+                </tfoot>
                 <tbody>
 {#                    {% get_query_sets admin_class as query_sets %}#}
                     {% for obj in query_sets %}
                     <tr>
+                        <td><input type="checkbox" tag="obj_checkbox" value="{{ obj.id }}"></td>
                         {% build_table_row request obj admin_class %}
                     </tr>
                     {% endfor %}
@@ -69,5 +89,41 @@
             </ul>
         </nav>
         </div>
+        </div>
     </div>
+    <script>
+         function CheckAllToggle(ele){
+            if ( $(ele).prop("checked")){
+                $("input[tag='obj_checkbox']").prop("checked",true);
+            }else {
+                $("input[tag='obj_checkbox']").prop("checked",false);
+            }
+        }
+
+
+       function ActionSubmit(form_ele) {
+           var selected_ids = [];
+           $("input[tag='obj_checkbox']:checked").each(function () {
+               selected_ids.push($(this).val());
+           })
+           var selected_action = $("#action_list").val();
+           console.log(selected_ids)
+           console.log(selected_action)
+           if (selected_ids.length == 0){
+               alert("No object got selected!");
+               return
+           }
+           if (!selected_action ){
+               alert("No action got selected!");
+           }
+
+
+           //start submit
+            var selected_ids_ele = "<input  name='selected_ids' type='hidden' value='" + selected_ids.toString() + "' >"
+            $(form_ele).append(selected_ids_ele);
+
+           return true;
+       }
+    </script>
 {% endblock %}
+
