--- a/galloCRM/templates/king_admin/table_obj_change.html
+++ b/galloCRM/templates/king_admin/table_obj_change.html
@@ -4,7 +4,7 @@
 {% block extra-css-resources %}
 <style type="text/css">
     .filter-select-box{
-        height: 250px!important;      {# 提高优先级 #}
+        height: 250px!important;
         width: 100%;
         border-radius: 3px;
     }
@@ -21,61 +21,69 @@
       {% for field in form_obj %}
       <div class="form-group">
         <label  class="col-sm-2 control-label" style="font-weight: normal">
-            {% if field.field.required %}    {#须填不能为空  #}
-                <b>{{ field.label }}</b>   {# 字段对应的<lable>标签的文字，例如“Name”。 #}
+            {% if field.field.required %}
+                <b>{{ field.label }}</b>
             {% else %}
-                 {{ field.label }}
+                {{ field.label }}
             {% endif %}
         </label>
         <div class="col-sm-6">
 {#          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">#}
-            {% if field.name in admin_class.filter_horizontal %}   {# 当field.name 为tags时 #}
+            {% if field.name in admin_class.filter_horizontal %}
                 <div class="col-md-5">
                     {% get_m2m_obj_list admin_class field form_obj as m2m_obj_list%}
-                    <select id="id_{{ field.name }}_from"  multiple="multiple" class="filter-select-box">
-                        {% for obj in m2m_obj_list %}   {# tags 里面存储的字段 #}
-                            <option ondblclick="MoveElementTo(this,'id_{{ field.name }}_to','id_{{ field.name }}_from')"  value="{{ obj.id }}">{{ obj }}</option>
-                        {% endfor %}
+                    <select id="id_{{ field.name }}_from"  multiple class="filter-select-box" >
+                        {% if field.name in admin_class.readonly_fields and not admin_class.is_add_form %}
+                            {% for obj in m2m_obj_list %}
+                                <option   value="{{ obj.id }}" disabled>{{ obj }}</option>
+                            {% endfor %}
+                        {% else %}
+                            {% for obj in m2m_obj_list %}
+                                <option ondblclick="MoveElementTo(this,'id_{{ field.name }}_to','id_{{ field.name }}_from')"  value="{{ obj.id }}">{{ obj }}</option>
+                            {% endfor %}
+                        {% endif %}
                     </select>
                 </div>
                 <div class="col-md-1">
-                    change
+                    ç®­å¤´
                 </div>
                 <div class="col-md-5" >
                     {% get_m2m_selected_obj_list form_obj field  as selected_obj_list %}
                     <select tag="chosen_list" id="id_{{ field.name }}_to" name="{{ field.name }}" multiple class="filter-select-box">
-
+                    {% if field.name in admin_class.readonly_fields  and not admin_class.is_add_form  %}
+                        {% for obj in selected_obj_list %}
+                            <option value="{{ obj.id }}"  disabled>{{ obj }}</option>
+                        {% endfor %}
+                    {% else %}
                         {% for obj in selected_obj_list %}
                             <option value="{{ obj.id }}" ondblclick="MoveElementTo(this,'id_{{ field.name }}_from','id_{{ field.name }}_to')" >{{ obj }}</option>
                         {% endfor %}
+                    {% endif %}
                     </select>
 
 {#                    {% print_obj_methods form_obj %}#}
                 </div>
+                <span style="color: red">{{ field.errors.as_text }}</span>
             {% else %}
-                {{ field }}     {# 表单里面的值 #}
+                {{ field }}<span style="color: red">{{ field.errors.as_text }}</span>
             {% endif %}
         </div>
       </div>
       {% endfor %}
 
+     {% if not admin_class.readonly_table %}
       <div class="form-group">
-{#          <div class="col-sm-2">#}
-{##}
-{#                <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>#}
-{##}
-{#          </div>#}
+
           {% block obj_delete %}
-
           <div class="col-sm-2">
-              <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>
-
+                <a class="btn btn-danger" href="{% url 'obj_delete' app_name table_name form_obj.instance.id %}">Delete</a>
           </div>
-              {% endblock %}
+          {% endblock %}
           <div class="col-sm-10 ">
             <button type="submit" class="btn btn-success pull-right">Save</button>
           </div>
       </div>
+    {% endif %}
     </form>
 
 <script>
@@ -91,12 +99,12 @@
     function SelectAllChosenData() {
 
         $("select[tag='chosen_list'] option").each(function () {
-            $(this).prop("selected", true);
+            $(this).prop("selected",true);
         })
-        //reove all disabled attrs
 
+        //remove all disabled attrs
+        $("form").find("[disabled]").removeAttr("disabled") ;
 
-        $("form").find("[disable]").removeAttr("disabled");
         return true;
     }
 </script>
