--- a/galloCRM/templates/king_admin/table_obj_delete.html
+++ b/galloCRM/templates/king_admin/table_obj_delete.html
@@ -4,6 +4,12 @@
 
     {% display_obj_related objs  %}
 
+
+    <ul style="color:red">
+        {% for k,v in errors.items %}
+            <li>{{ k }}:{{ v }}</li>
+        {% endfor %}
+    </ul>
     <form method="post">{% csrf_token %}
         <input type="submit" class="btn btn-danger" value="Yes,I'm sure">
         <input type="hidden" value="yes" name="delete_confirm">
