--- a/galloCRM/templates/base.html
+++ b/galloCRM/templates/base.html
@@ -47,5 +47,8 @@
     <script src="/statics/js/holder.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/statics/js/ie10-viewport-bug-workaround.js"></script>
+    {% block bottom-js %}
+
+    {% endblock %}
 
 </html>
