--- a/galloCRM/templates/king_admin/table_index.html
+++ b/galloCRM/templates/king_admin/table_index.html
@@ -18,7 +18,14 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
 
-        <li><a href="#">{{ request.user.userprofile.name }}</a></li>
+        <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">{{ request.user.name }} <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">配置</a></li>
+                <li><a href="{% url 'acc_logout' %}">注销</a></li>
+              </ul>
+        </li>
+
       </ul>
 
     </div>
@@ -43,11 +50,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for table_name,admin_class  in app_tables.items %}
+                        {% for table_name,admin  in app_tables.items %}
                             <tr>
                                 <td>
                                     <a href="{% url 'table_objs' app_name table_name %}">
-                                       {% render_app_name admin_class %}
+                                       {% render_app_name admin %}
                                     </a>
                                 </td>
                                 <td>add</td>
