--- a/galloCRM/templates/king_admin/table_obj_change.html
+++ b/galloCRM/templates/king_admin/table_obj_change.html
@@ -45,7 +45,7 @@
                     </select>
                 </div>
                 <div class="col-md-1">
-                    ç®­å¤´
+                    箭头
                 </div>
                 <div class="col-md-5" >
                     {% get_m2m_selected_obj_list form_obj field  as selected_obj_list %}
@@ -65,7 +65,9 @@
                 </div>
                 <span style="color: red">{{ field.errors.as_text }}</span>
             {% else %}
-                {{ field }}<span style="color: red">{{ field.errors.as_text }}</span>
+                {{ field }}
+                <span style="color: grey">{{ field.help_text }}</span>
+                <span style="color: red">{{ field.errors.as_text }}</span>
             {% endif %}
         </div>
       </div>
